[project]
name = "rsshub-python"
version = "0.1.0"
description = "RSSHub Python"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "arrow==1.2.2",
    "beautifulsoup4==4.11.1",
    "click==8.0.3",
    "cssselect==1.2.0",
    "feedparser==6.0.8",
    "Flask==2.0.2",
    "gunicorn",
    "Werkzeug==2.0.3",
    "Flask-Caching==2.0.2",
    "Jinja2==3.0.3",
    "lxml==4.9.3",
    "parsel==1.8.1",
    "python-dotenv==1.2.1",
    "pytz==2025.2",
    "Requests==2.32.5",
    "setuptools==80.9.0",

]

[project.optional-dependencies]
dev = [
    "Bootstrap-Flask==1.8.0",
    "Flask-Analytics==0.6.0",
    "Flask-DebugToolbar==0.11.0",
    "Flask-Moment==1.0.2",
    "icecream==2.1.1",
    "playwright",
    "ptpython==3.0.31",
    "pyjsparser==2.7.1",
    "pyppeteer",
    "undetected-chromedriver==3.5.5",
]
