[project]
name = "rsshub-python"
version = "0.1.0"
description = "RSSHub Python"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "arrow==1.2.2",
    "beautifulsoup4==4.11.1",
    "Bootstrap-Flask==2.4.0",
    "click==8.1.7",
    "cssselect==1.2.0",
    "feedparser==6.0.8",
    "Flask==3.0.0",
    "Flask-Moment==1.0.2",
    "gunicorn",
    "Werkzeug==3.0.0",
    "Flask-Caching==2.3.0",
    "Jinja2==3.1.2",
    "parsel==1.8.1",
    "python-dotenv==1.2.1",
    "pytz==2025.2",
    "Requests==2.32.5",
    "setuptools==80.9.0",
    "playwright>=1.57.0",
    "trafilatura>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "Flask-Analytics==0.6.0",
    "Flask-DebugToolbar==0.11.0",
    "icecream==2.1.1",
    "playwright",
    "ptpython==3.0.31",
    "pyjsparser==2.7.1",
    "pyppeteer",
    "undetected-chromedriver==3.5.5",
]
